--- a/src/sass/page.scss
+++ b/src/sass/page.scss
@@ -4,11 +4,11 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: #ffffff;
+  background-color: #F4F4F4;
   overflow: hidden;
   .page-content {
-    padding-top: $header-height;
   	position: absolute;
+    padding-top: $header-height;
   	left: 0;
     right: 0;
     top: 0;
