--- a/src/sass/var.scss
+++ b/src/sass/var.scss
@@ -1,3 +1,10 @@
+/* ==================================================
+ * 			  全局Sass变量
+ * 	这里简单介绍下CSS的布局，这里采用主流的Flexbox,
+ *  在高度上采取固定Px，宽度自适应, 在布局上有参考下
+ *  Framework7 的布局,在一些宽度上采用rem来优化多终端的适应
+ * ================================================= */
+
 //======= Colors
 $white-base:									#ffffff !default;
 
