--- a/src/sass/scaffold.scss
+++ b/src/sass/scaffold.scss
@@ -11,6 +11,7 @@
 body {
 	font-family: -apple-system, SF UI Text, Helvetica Neue, Helvetica, Arial, sans-serif;
 	margin: 0;
+	background-color: #F4F4F4;
 	-webkit-text-size-adjust: 100%;
 }
 
