搜索界面完善与优化

--- a/src/sass/packages/cell.scss
+++ b/src/sass/packages/cell.scss
@@ -57,16 +57,6 @@
 			    background-repeat: no-repeat;
 			    background-size: 24px 60px;
 			}
-			// .play-icon {
-			// 	float: right;
-			// 	display: inline-block;
-			// 	width: 24px;
-			// 	height: 24px;
-			// 	margin-top: -5px;
-			// 	background-image: url(https://y.gtimg.cn/mediastyle/mobile/yqq_v5/img/list_sprite.png?max_age=19830212&d=20151105145423);
-			//     background-repeat: no-repeat;
-			//     background-size: 24px 60px;
-			// }
 			.listen-count {
 				position: absolute;
 				top: 100%;
@@ -211,6 +201,36 @@
 	.mint-cell-value {
 		flex: 1;
 		justify-content: space-between;
+	}
+}
+
+// search list cell
+.music-cell-type5 {
+	.mint-cell-title {
+		flex: 0;
+	}
+	.mint-cell-value {
+		flex: 1;
+		.music-icon {
+		    width: 22px;
+		    height: 20px;
+		    margin-right: 20px;
+			background-image: url(https://y.gtimg.cn/mediastyle/mobile/yqq_v5/img/search_sprite.png?max_age=19830212&d=20151105145423);
+		    background-repeat: no-repeat;
+		    background-size: 22px 30px;
+		}
+		.song-wrapper {
+			margin: 10px 0 2px;
+			line-height: 18px;
+			font-size: 16px;
+			p:first-child {
+				color: initial;
+			}
+			p:last-child {
+				margin-bottom: 5px;
+				font-size: 14px;
+			}
+		}
 	}
 }
 
