--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,11 +3,11 @@
 
 @import './scaffold.scss';
 
-@import './font.scss';
+// @import './font.scss';
 
 @import './mixins.scss';
 
-@import './dimension.scss';
+// @import './dimension.scss';
 
 @import './page.scss';
 
