--- a/src/sass/var.scss
+++ b/src/sass/var.scss
@@ -60,5 +60,5 @@ $register-active:								$purple-active;
 
 //** Width, Height, Padding, Margin
 $header-height:									40px;
-
+$bottom-height:									56px;
 
