--- a/src/sass/packages/header.scss
+++ b/src/sass/packages/header.scss
@@ -1,7 +1,15 @@
 .music-header,.music-header-2 {
+    justify-content: space-between;
 	font-size: 18px;
+	.mint-header-title {
+		margin: 0 10px;
+		text-overflow: initial;
+	}
 	.mintui-back  {
 		font-size: 23px;
+	}
+	.mint-header-button {
+		flex: 0;
 	}
 }
 
