--- a/src/sass/page.scss
+++ b/src/sass/page.scss
@@ -9,6 +9,7 @@
   .page-content {
   	position: absolute;
     padding-top: $header-height;
+    margin-bottom: $bottom-height;
   	left: 0;
     right: 0;
     top: 0;
