--- a/src/sass/themes/default.scss
+++ b/src/sass/themes/default.scss
@@ -1,3 +1,8 @@
+/* =======================================
+ *			主题部分CSS
+ *	未来将考虑增加主题切换功能，在这里提前做点准备
+ * ======================================= */
+
 .music-header {
 	background-color: #31c27c;
 }
