--- a/src/sass/transition/index.scss
+++ b/src/sass/transition/index.scss
@@ -1,6 +1,6 @@
-/* ===============================================
- * 由 Transition.scss 统一管理Transition, Animation
- * =============================================== */
+/* ==================================================
+ * 由 Transition.scss 统一管理全局Transition, Animation
+ * ================================================== */
 
 // Page Turn on Transian Effect
 .turn-on {
